[options.entry_points]
console_scripts =
  tabloo_cli = tabloo.tabloo_cli:main

[aliases]
test=pytest

[tool:pytest]
addopts = --cov=tabloo --cov-report term-missing --cov-report html:cov_html

# We may add something like the following to error on warnings (but need to exclude warnings from pandas)
# -Werror -Wignore:::pandas.compat
# See: https://github.com/pytest-dev/pytest/issues/1403
